--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,4 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
-
-# Fabric Properties
-	# check these on https://fabricmc.net/use
-	minecraft_version=1.15.2
-	yarn_mappings=1.15.2+build.17
-	loader_version=0.8.8+build.202
-
-# Mod Properties
-	mod_version = 1.0a
-	maven_group = xyz.rongmario
-	archives_base_name = cleancut
-
-# Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.14.0+build.317-1.15
+# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
+# This is required to provide enough memory for the Minecraft decompilation process.
+org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
