--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '1.0'
+version = 'mc1.15-1.0-forge'
 group = 'xyz.rongmario' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'cleancut'
 
