--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.8.8+build.202
 
 # Mod Properties
-	mod_version = 2.0
+	mod_version = mc1.16-2.0a-fabric
 	maven_group = xyz.rongmario
 	archives_base_name = cleancut
 
