--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=20w45a
-	yarn_mappings=20w45a+build.31
-	loader_version=0.10.6+build.214
+	minecraft_version=1.17
+	yarn_mappings=1.17+build.11
+	loader_version=0.11.6
 
 # Mod Properties
-	mod_version = mc20w45a-3.0-fabric
+	mod_version = 1.17-4.0-fabric
 	maven_group = xyz.rongmario
 	archives_base_name = cleancut
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.25.5+1.17
+	fabric_version=0.35.1+1.17
