--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,9 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.11.6
 
 # Mod Properties
-	mod_version = 1.17-4.0-fabric
-	maven_group = xyz.rongmario
-	archives_base_name = cleancut
+	mod_version=1.17-4.0-fabric
+	maven_group=xyz.rongmario
+	archives_base_name=cleancut
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
