--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,33 @@
+# gradle
 
+.gradle/
 build/
-
 out/
+classes/
 
-run/
+# eclipse
 
-.gradle/6.5/
+*.launch
 
-.gradle/buildOutputCleanup/
-
-.gradle/checksums/
-
-.gradle/loom-cache/
-
-.gradle/vcs-1/
+# idea
 
 .idea/
+*.iml
+*.ipr
+*.iws
 
-.gradle/4.10.3/fileChanges/
+# vscode
 
-.gradle/4.10.3/
+.settings/
+.vscode/
+bin/
+.classpath
+.project
+
+# macos
+
+*.DS_Store
+
+# fabric
+
+run/
