--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,15 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/use
-	minecraft_version=1.17
-	yarn_mappings=1.17+build.11
-	loader_version=0.11.6
+	# check these on https://fabricmc.net/versions.html
+	minecraft_version=1.18
+	yarn_mappings=1.18+build.1
+	loader_version=0.12.6
 
 # Mod Properties
-	mod_version=1.17-4.0-fabric
+	mod_version=1.18-4.0-fabric
 	maven_group=xyz.rongmario
 	archives_base_name=cleancut
 
 # Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.35.1+1.17
+	fabric_version=0.43.1+1.18
