--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,14 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.18
-	yarn_mappings=1.18+build.1
-	loader_version=0.12.6
+	minecraft_version=1.18.2
+	yarn_mappings=1.18.2+build.3
+	loader_version=0.14.7
 
 # Mod Properties
-	mod_version=1.18-4.0-fabric
-	maven_group=xyz.rongmario
+	mod_version=1.18.2-5.0-fabric
+	maven_group=zone.rong
 	archives_base_name=cleancut
 
 # Dependencies
-	fabric_version=0.43.1+1.18
+	fabric_version=0.55.1+1.18.2
