--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,17 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
+org.gradle.java.home=C:/Program Files/Eclipse Adoptium/jdk-17.0.2.8-hotspot
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.19
-	yarn_mappings=1.19+build.4
-	loader_version=0.14.7
+	minecraft_version=1.19.2
+	yarn_mappings=1.19.2+build.8
+	loader_version=0.14.9
 
 # Mod Properties
-	mod_version=1.19-5.0-fabric
+	mod_version=1.19.2-5.1-fabric
 	maven_group=zone.rong
 	archives_base_name=cleancut
 
 # Dependencies
-	fabric_version=0.56.1+1.19
+	fabric_version=0.60.0+1.19.2
