--- a/settings.gradle
+++ b/settings.gradle
@@ -1,10 +1,18 @@
 pluginManagement {
     repositories {
-        jcenter()
         maven {
             name = 'Fabric'
             url = 'https://maven.fabricmc.net/'
         }
+        mavenCentral()
         gradlePluginPortal()
     }
 }
+
+include ':forge_1.20', 'fabric_1.20'
+
+project(':forge_1.20').projectDir = file('forge/1.20')
+project(':fabric_1.20').projectDir = file('fabric/1.20')
+
+rootProject.name = 'CleanCut'
+
